--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -16,6 +17,8 @@
     "framer-motion": "^11.3.28",
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.428.0",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.3",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
