--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@clerk/nextjs": "^5.3.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tabler/icons-react": "^3.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^11.3.28",
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.428.0",
