--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-world-flags": "^1.6.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-world-flags": "^1.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
