--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.3.28",
     "html-react-parser": "^5.1.12",
     "lucide-react": "^0.428.0",
+    "mini-svg-data-uri": "^1.4.4",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
